# pyxdg2

./: .editorconfig  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.rst  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: tox.yml
pyxdg2/: __init__.py  basedir.py
tests/: __init__.py  test_basedir.py
