[tool.poetry]
name = "pyxdg2"
version = "0.1.0"
description = "A reimplementation of PyXDG in modern Python"
authors = ["Alex Lowe <alex@lowe.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.1"

[tool.poetry.dev-dependencies]
ruff = "^0.0.222"
tox = "^4.3.0"
mypy = "^0.991"
black = "^22.12"
pyright = "^1.1"
pre-commit = "^2.21"
pytest = "^7"
pytest-check = "^2.1.2"
pytest-mock = "^3.10"
hypothesis = "^6.62"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enables all relevant ruff supported rules as of 2023-01-15
# https://github.com/charliermarsh/ruff#supported-rules
select = [
    "F", "E", "W", "C90", "I", "D", "UP", "N", "YTT", "ANN", "S",  "BLE", "FBT",
    "B", "A", "C4", "T10", "EM", "ISC", "ICN", "T20", "PT", "Q", "RET", "SIM",
    "TID", "ARG", "DTZ", "ERA", "PGH", "PLC", "PLE", "PLR", "PLW", "PIE", "RUF",
]
target-version = "py38"  # Target the lowest required version of Python
ignore = [
    # PyDocStyle checks can conflict - disable the ones we don't want.
    "D203", "D213", "D400",
    # I don't like this rule.
    "EM102"
]
[tool.ruff.per-file-ignores]
"tests/**.py" = [
    "ANN",  # Don't require annotations in tests
    "D",  # Don't require docstrings in tests
    "S101",  # Tests do assert.

]
